<resources>
    <string name="app_name">ourMoody</string>
    <string name="mood">Stimmung von Benutzer</string>
    <string name="entryBtn">ourMoody Entry Button</string>
    <string name="addCommentButton">Kommentar hinzufügen Button</string>
    <string name="yesterday">Gestern</string>
    <string name="today">Heute</string>
    <string name="days_ago">Tage her</string>

    <!-- Scan -->
    <string name="resultDisplay">Result Display...</string>
    <string name="fingerScanButton">fingerScan</string>
    <string name="show_comment_descr">zeige gespeichertes Kommentar</string>
    <string name="temperature">30° C</string>
    <string name="City">Graz</string>
    <string name="open_weather_maps_app_id" translatable="false">a8de24b6eafaefc7e599fa726832d039</string>
    <string name="weather_icon">Wetter icon</string>
    <string name="why">Warum fühlst du dich so?</string>

    <!-- Notification -->
    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="weiter">Weiter</string>
    <string name="los">Jetzt geht\'s los!</string>
    <string name="skip">Skip</string>
    <string name="change_notif">Benachrichtigungen</string>
    <string name="error">Oh nein! Ein Fehler ist passiert</string>
    <string name="keine_benachrichtigungen">Keine Benachrichtigungen</string>
    <string name="timepicker_open">Timepicker öffnen</string>
    <string name="benachrichtigung_cancel">Benachrichtigung löschen</string>
    <string name="change_city">Stadt ändern</string>
</resources>