<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimePicker"
    >
    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/timepicker_btn"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/keine_benachrichtigungen"
        android:textSize="30sp" />
    <Button
        android:id="@+id/timepicker_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/timepicker_open" />
    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timepicker_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/benachrichtigung_cancel"/>
    <TimePicker
        android:id="@+id/timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</RelativeLayout>