<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/parent_relative_layout"
    android:background="@color/colorHappy"
    >
<!--
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment2"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />
-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_moody"
        android:layout_centerInParent="true"
        android:contentDescription="@string/mood"
        android:src="@drawable/happy"
        />

    <ImageButton
        android:id="@+id/btn_addComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@null"
        android:contentDescription="@string/addCommentButton"
        android:src="@drawable/ic_comment_black"
        />

   <ImageButton
       android:id="@+id/btn_ourMoody_entries"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_alignParentBottom="true"
       android:layout_margin="16dp"
       android:background="@null"
       android:contentDescription="@string/entryBtn"
       android:src="@drawable/ic_history_black"
       android:layout_alignParentRight="true" />

</RelativeLayout>
