<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <FrameLayout
        android:id="@+id/left_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:padding="32dp"
        tools:background="@color/colorREAAALLYHappy">

        <TextView
            android:id="@+id/tv_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:textStyle="bold"
            tools:text="Today" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/weather_fragment">

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/temperature"
                    android:textColor="#000000" />

                <TextView
                android:id="@+id/updated_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                />

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/details" />

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/weather_icon"
                android:src="@drawable/ic_sunny" />


            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"

                android:text="@string/City"
                android:textColor="#000000" />

            </FrameLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_show_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@null"
            android:contentDescription="@string/show_comment_descr"
            android:src="@drawable/ic_show_comment" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/right_frame_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:background="#FFFFFF" />
</LinearLayout>